refactor(runtime): Remove the old Kafka serialization class and use ActionStateSerialization uniformly